# palworld-admin

./: .gitignore  README.md  main.py  pal-admin-console.spec  pal-admin-linux.spec  pal-admin.spec  palworld-admin-console.spec  palworld-admin-linux.spec  palworld-admin-no-ui.spec  palworld-admin.spec  pyproject.toml  release-notes.txt  settings.py
.github/: FUNDING.yml
Docker/: Dockerfile  docker-compose.yml  entrypoint.sh
classes/: __init__.py  localserver.py  memorystorage.py
converter/lib/: paltypes.py
converter/lib/rawdata/: base_camp.py  build_process.py  character.py  character_container.py  connector.py  foliage_model.py  foliage_model_instance.py  group.py  map_concrete_model.py  work_collection.py  worker_director.py
helper/: cli.py  multiprocess.py  networking.py  processhandling.py  threads.py
installer/: __init__.py
migrations/versions/: ae1eab510d76_added_auto_restart_on_unexpected_.py
palworld_admin/: main.py  settings.py
palworld_admin/classes/: __init__.py  dbmodels.py  discord_client.py  localserver.py  palworldsettings.py
palworld_admin/converter/: convert.py
palworld_admin/converter/lib/: archive.py  gvas.py  paltypes.py
palworld_admin/converter/lib/rawdata/: base_camp.py  base_camp_module.py  build_process.py  character.py  character_container.py  connector.py  debug.py  dynamic_item.py  foliage_model.py  foliage_model_instance.py  group.py  item_container.py  item_container_slots.py  map_concrete_model.py  map_model.py  work_collection.py  worker_director.py
palworld_admin/helper/: cli.py  consolemanagement.py  dbcreation.py  dbmanagement.py  dbmigration.py  fileprocessing.py  networking.py  oscommands.py  threads.py
palworld_admin/migrations/versions/: 170971d44a48_removed_epicapp_palserver_added_query_.py  26ad9b14b180_added_discord_settings_to_.py  3103e5ae5314_added_publiclobby_to_launchersettings.py  59a004fd30a9_added_players_table_added_steamauth_and_.py
palworld_admin/rcon/: __init__.py  rcon.py
palworld_admin/servermanager/: __init__.py
palworld_admin/servermanager/local/: __init__.py
palworld_admin/ui/: __init__.py
palworld_admin/website/: __init__.py  views.py
rcon/: __init__.py  rcon.py
servermanager/local/: __init__.py
ui/: __init__.py  main.js  package-lock.json  package.json
website/: __init__.py  views.py
website/templates/: base.html  home.html  rcon.html  rcon_loader.html
