[tool.poetry]
name = "palworld_admin"
version = "0.7.0"
description = "Palworld Admin is a GUI to manage your Palworld Dedicated Server, including deployment, configuration, monitoring and backups."
authors = ["Lukium <mrlukium@outlook.com>"]
license = "Expressed Permission Only"
readme = "README.md"
include = ["classes/*", "converter/*", "helper/*", "rcon/*", "servermanager/*", "ui/*", "website/*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Flask = "^3.0.1"
waitress = "^2.1.2"
pywebview = "^4.4.1"
requests = "^2.31.0"
pillow = "^10.2.0"
pyjwt = "^2.8.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^6.3.0"

[tool.poetry.scripts]
palworld-admin = 'palworld_admin.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"