[tool.poetry]
name = "palworld_admin"
version = "0.8.6"
description = "Palworld Admin is a GUI to manage your Palworld Dedicated Server, including deployment, configuration, monitoring and backups."
authors = ["Lukium <mrlukium@outlook.com>"]
license = "Expressed Permission Only"
readme = "README.md"
include = ["classes/*", "converter/*", "helper/*", "rcon/*", "servermanager/*", "ui/*", "website/*", "migrations/*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.31.0"
eventlet = "^0.35.1"
Flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.3.6"
flask-migrate = "^4.0.5"

[tool.poetry.dev-dependencies]
pyinstaller = "^6.3.0"

[tool.poetry.scripts]
palworld-admin = 'palworld_admin.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"