[tool.poetry]
name = "palworld_admin"
version = "0.9.8"
description = "Palworld Admin is a GUI to manage your Palworld Dedicated Server, including deployment, configuration, monitoring and backups."
authors = ["Lukium <mrlukium@outlook.com>"]
license = "Expressed Permission Only"
readme = "README.md"
include = ["classes/*", "converter/*", "helper/*", "rcon/*", "servermanager/*", "ui/*", "website/*", "migrations/*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
cryptography = ">=42.0.2"
requests = "^2.31.0"
eventlet = "^0.35.1"
Flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.3.6"
flask-migrate = "^4.0.5"
flask-openid-steam = "^1.3.1"

[tool.poetry.scripts]
palworld-admin = 'palworld_admin.main:main'

[tool.poetry.group.dev.dependencies]
nuitka = "^2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"